tests/NormalTests/paczka1/fuzzy1/23479822.err
Error in line 3: wjpinoyIUTK A397 30,6
Error in line 13: A397 S327 33,5
Error in line 17: pzug8t S586 51,4
Error in line 9: py2 A268 64,5
Error in line 23: pzug8t A397 16,4
Error in line 34: 07cPMquXTsI A268 175,89
Error in line 32: xQtv S327 21,6
